# YouTube_dowloader

./: README.md  Untitled.ipynb  ft_pg_interactive.py  main.py
with_pygame/: README.md  Untitled.ipynb  ancien_ft_pg_input_textbar.py  ancien_gui.py  ft_pg_button.py  ft_pg_gui.py  ft_pg_init.py  ft_pg_input_textbar.py  ft_yt_utils.py  main.py  play_mp4.py  test.py  youtube_downloader_gui.py
with_pygame/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
with_pygame/video/: Touhou Bad Apple   #AMV.webm  When you listening to Attack on Titan S4 Opening.m4a  audUnlike Pluto - Crawling.m4a
with_pyqt/: convert_ui.sh  main.py  test.py  untitled.ui
with_pyqt/untitled/: CMakeLists.txt  untitled.cpp  untitled.h
